--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -12,7 +12,16 @@
   --white: #fff;
   --overlay-background: rgba(33, 150, 243, 0.9);
 }
-
+textarea {
+  maring: 0;
+  padding: 0;
+  resize: none;
+}
+input {
+  padding: 0px;
+  margin: 0px;
+  border-style: none;
+}
 body {
   font-family: 'Roboto', 'Raleway', sans-serif;
   list-style: none;
@@ -464,8 +473,8 @@ p {
   fill: var(--icon-gray);
   cursor: pointer;
 }
-.icon-social--footer{
-  fill:var(--white);
+.icon-social--footer {
+  fill: var(--white);
   background-color: rgba(255, 255, 255, 0.1);
 }
 .icon-social--gray {
@@ -621,22 +630,63 @@ p {
 
 .modal {
   position: relative;
-  display: flex;
   margin: 0 auto;
-
   margin-top: 221px;
   z-index: 1;
   background-color: var(--white);
   height: 581px;
   width: 528px;
   border-radius: 4px;
-  justify-content: flex-end;
+
   transition: transform;
   transform: scale(1);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
+.modal__form-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+.modal__contact-form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
 
+.modal__contact-form__input-field {
+  position: relative;
+  height: 40px;
+  width: 100%;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 42px;
+}
+.modal__contact-form__input-field--comment {
+  height: 120px;
+  padding-left: 2px;
+  text-align: left;
+  padding-top: 2px;
+}
+.modal__contact-form__input-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.modal__contact-form__icon {
+  position: absolute;
+  z-index: 1;
+  fill: var(--black);
+  padding-left: 15px;
+}
+.modal__button {
+  display: flex;
+  justify-content: flex-end;
+}
 .is-hidden {
   pointer-events: none;
   visibility: none;
@@ -669,3 +719,5 @@ p {
   fill: var(--white);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+/* -- Contact Form in Modal --*/
