--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -11,9 +11,9 @@
   --bold: 700;
   --white: #fff;
   --overlay-background: rgba(33, 150, 243, 0.9);
+  --transition-cubic: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 textarea {
-  maring: 0;
   padding: 0;
   resize: none;
 }
@@ -643,46 +643,79 @@ p {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
-.modal__form-container {
+.modal__contact-form {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 12px;
   padding-left: 40px;
   padding-right: 40px;
 }
-.modal__contact-form {
+
+.contact-form {
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 4px;
+  gap: 10px;
 }
-
-.modal__contact-form__input-field {
+.contact-form__item {
+  display: flex;
+  gap: 4px;
+  flex-direction: column;
+}
+.contact-form__input-field {
   position: relative;
   height: 40px;
   width: 100%;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 42px;
+  font-size: 14px;
 }
-.modal__contact-form__input-field--comment {
+
+.contact-form__input-field:focus-within,
+.contact-form__input-field:hover {
+  border: 1px solid var(--blue);
+  border-radius: 4px;
+  outline: var(--blue);
+  transition: var(--transition-cubic);
+}
+.contact-form__label {
+  font-size: 12px;
+  font-weight: 400;
+  color: var(--gray);
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+}
+.contact-form__input-field--comment {
   height: 120px;
-  padding-left: 2px;
+  padding-left: 10px;
+  color: rgba(117, 117, 117, 0.5);
+  font-size: 12px;
   text-align: left;
-  padding-top: 2px;
+  padding-top: 10px;
 }
-.modal__contact-form__input-container {
+
+.contact-form__header {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+  text-align: center;
+}
+
+.contact-form__input-field__container {
   width: 100%;
   display: flex;
   align-items: center;
 }
 
-.modal__contact-form__icon {
+.contact-form__input-field__icon {
   position: absolute;
   z-index: 1;
   fill: var(--black);
   padding-left: 15px;
 }
+
 .modal__button {
   display: flex;
   justify-content: flex-end;
