--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap');
-
+@import '../CSS/modern-normalize.css';
 :root {
   --blue: #2196f3;
   --gray: #757575;
@@ -13,15 +13,16 @@
   --overlay-background: rgba(33, 150, 243, 0.9);
   --transition-cubic: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 textarea {
   padding: 0;
   resize: none;
 }
 input {
   padding: 0px;
-  margin: 0px;
   border-style: none;
 }
+
 body {
   font-family: 'Roboto', 'Raleway', sans-serif;
   list-style: none;
@@ -199,17 +200,24 @@ p {
   cursor: pointer;
   margin: 0 auto;
   padding: 10px 43px 10px 43px;
+  border-radius: 4px;
 }
 .button__primary--bold-text {
   font-weight: var(--bold);
   font-size: 16px;
   line-height: 1.87;
   color: var(--white);
-  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); */
+
   border-radius: 4px;
   text-align: center;
 }
-
+.button__primary--contact-form {
+  padding: 10px 76px 10px 76px;
+  font-size: 16px;
+  color: var(--white);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  line-height: 1.875;
+}
 .button__secondary {
   background-color: var(--lightgray);
   cursor: pointer;
@@ -269,6 +277,7 @@ p {
   gap: 30px;
   background-image: url('../images/header.png');
   background-color: rgba(47, 48, 58, 0.4);
+  background-repeat: no-repeat;
 }
 
 .section__filters {
@@ -447,7 +456,7 @@ p {
 }
 .icon-features {
   width: 270px;
-  height: 120px;
+
   padding-bottom: 30px;
 }
 
@@ -679,6 +688,7 @@ p {
   outline: var(--blue);
   transition: var(--transition-cubic);
 }
+
 .contact-form__label {
   font-size: 12px;
   font-weight: 400;
@@ -687,7 +697,7 @@ p {
   letter-spacing: 0.01em;
 }
 .contact-form__input-field--comment {
-  height: 120px;
+  height: 110px;
   padding-left: 10px;
   color: rgba(117, 117, 117, 0.5);
   font-size: 12px;
@@ -709,22 +719,97 @@ p {
   align-items: center;
 }
 
+.contact-form__input-field__container:focus-within {
+  fill: var(--blue);
+}
+
 .contact-form__input-field__icon {
   position: absolute;
   z-index: 1;
-  fill: var(--black);
+
   padding-left: 15px;
 }
+input[type='checkbox'] {
+  appearance: none;
+}
 
+.checkbox__icon {
+  width: 16px;
+  height: 15px;
+}
+
+.check-icon {
+  position: absolute;
+  fill: var(--white);
+}
+.check {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.checkbox {
+  width: 20px;
+  height: 20px;
+  background-color: var(--white);
+  border: 1px solid var(--gray);
+  border-radius: 2px;
+}
+
+input[type='checkbox'] {
+  /* border: 1px solid var(--icon-gray);
+  border-radius: 2px; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+input:checked {
+  background-color: var(--blue);
+  transition: var(--transition-cubic);
+  border-style: none;
+  cursor: pointer;
+  fill: var(--white);
+}
+
+.terms__text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  color: var(--gray);
+  letter-spacing: 0.03em;
+}
+
+.terms__text--underline {
+  text-decoration: underline;
+  color: var(--blue);
+  cursor: pointer;
+}
+
+.modal__terms__content {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 7px;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal__terms__container {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  padding-top: 20px;
+}
 .modal__button {
   display: flex;
   justify-content: flex-end;
 }
+
 .is-hidden {
   pointer-events: none;
   visibility: none;
   opacity: 0;
 }
+
 .is-hidden .modal {
   transform: scale(0);
 }
